<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Returned"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sdjhfs sd fjdkhf ksdf ksjdfh sdkfsd f"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorMain"/>
        <TextView
            android:id="@+id/tv_borrow_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrow_at"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_deadline_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline_at"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_return_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_at"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_renewal_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renewal_num"
            android:textStyle="bold"/>
    </LinearLayout>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/ic_right_blue"/>
</LinearLayout>